--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -3,7 +3,7 @@
 :wordpress1-url: http://petersteier.wordpress.com/2011/10/22/windows-indexer-changes-modification-dates-of-eml-files/
 :user_manual_quota: https://doc.owncloud.com/server/next/user_manual/files/webgui/quota.html
 
-:description: Here you can find some of the most frequently asked questions about the ownCloud Desktop App.
+:description: Here you can find some of the most frequently asked questions about the ownCloud Desktop app.
 
 == Introduction
 
