--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -28,7 +28,7 @@ Use a WebDAV command line tool to test::
 
 == How to Interpret Quotas
 
-When a quota has been defined, either in the backend, the personal Space or on a Project Space, you can see additional info in your sync relationship about the quota values. If no quota has been set, these values are not shown for the particular sync relationship:
+When a quota has been defined, either in the backend, the personal space or on a project space, you can see additional info in your sync relationship about the quota values. If no quota has been set, these values are not shown for the particular sync relationship:
 
 image::appendices/troubleshooting/sync-quota-oc10.png[Quotas in ownCloud Server,width=500]
 
@@ -42,15 +42,15 @@ See the following table to interpret the numbers shown correctly:
 a| * Data used in my quota
 * Plus data used in external storages +
 (If configured, ownCloud Server only)
-* Plus data used in other users shares
+* Plus data used in other users' shares
 
 a| * Available quota
 * Plus data used in external storages +
 (If configured, ownCloud Server only)
-* Plus data used in other users shares
+* Plus data used in other users' shares
 |===
 
-In the image below, you see that there are no quotas for the personal/recieved shares Spaces, but for project Spaces:
+In the image below, you see that there are no quotas for the personal space or received shares, but for project spaces:
 
 image::appendices/troubleshooting/sync-quota-spaces.png[Quotas in Infinite Scale,width=500]
 
