--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -104,6 +104,10 @@ When other users share data with you, it's downloaded to the sync folder and cou
 
 The file size values differ depending on the client you are using. Some operating systems like iOS and macOS use the decimal system (power of 10) where 1kB or one kilobyte consists of 1000 bytes, while Linux, Android and Windows use the binary system (power of 2) where 1KB consists of 1024 bytes and is called a kibibyte. So no reason to worry if you see different file sizes in your desktop client than on your mobile devices or the web interface.
 
+=== The Desktop Client doesn't sync changes from my local sync folder when I use a network volume
+
+Due to technical limitations, the desktop sync client can't detect local chenges, when the local sync folder is stored on a mounted network volume. Only the full local discovery (default=1h) will detect the change and trigger the upload. You might configure a smaller [`fullLocalDiscoveryInterval`](https://doc.owncloud.com/desktop/next/advanced_usage/configuration_file.html#section-owncloud) to sync local changes more often.
+
 == Major Configuration Changes
 
 === I Want to Move My Local Sync Folder
